Updates from partner feedback
Redo the SDP window, make other miscellaneous updates that were easy to do

--- a/caracol/html/about.html
+++ b/caracol/html/about.html
@@ -1,20 +1,23 @@
 <button type= "button" class= "exitButton" onclick="aboutPanelClose()" >X</button>
 <h2>About The Sustainable Development Plan for the CMCC Region</h2>
 
+<br>
 
-<button type= "button" class= "button" id="aboutTutorialButton" onclick="restartTutorialAbout()">Start Tutorial</button>
+<h3>Project documentation</h3>
 
-<h3>Learn more about the project</h3>
-
+<b>Sustainable Development Plan for the CMCC</b> - Full text of the SDP document <i>(Note that this link will be added once the final version of the SDP is available)</i>
+<br> <br>
 <!--<a href="data/dataInfoDocuments/interimReportOctober2019.pdf">Interim Report October 2019</a>
 <br>-->
-<a href="data/dataInfoDocuments/may2020InterimReport.pdf">Report on Modeling & Scenarios</a>
+<b><a href="data/dataInfoDocuments/may2020InterimReport.pdf">Report on Modeling & Scenarios</a></b> - Technical report with detail about the modeling and scenarios that went into the SDP.
 
-<br><br><br>
+<br><br>
+<h3>Learn more about the project</h3>
+
 Pending plans to improve the road network from Georgeville to Caracol have raised concerns that unplanned development and improved access could lead to degradation of both natural and cultural assets, if done without proactive planning. Improvements to the Caracol road are expected to increase visitors to the region, which in turn can impact water supplies, waste disposal, and security, while potentially bringing jobs and economic growth to the area.
-<br>
+<br><br>
 State-of-the-art ecosystem services mapping and analysis was done with a strong focus on stakeholder interests, values, and knowledge. The goal is to create an ecosystem-based plan that maintains the long-term economic prosperity of the region and balances resource use with environmental protection and local livelihoods.
-<br>
+<br><br>
 This web-based viewer provides an overview of the stakeholder-driven data used to guide this work, as well as primary results. Maps are provided showing areas where development is more or less likely to impact cultural sites, water supplies and other community resources. Two planning options are also provided, one that takes a more conservative approach to development, the other taking a less conservative approach. For each planning option, a synopsis is provided of projected environmental, economic and social impacts. 
 
 For more detailed information about this analysis, please see the <a href="data/dataInfoDocuments/may2020InterimReport.pdf">report on Modeling & Scenarios</a>.
@@ -47,12 +50,16 @@ Baseline landscape assessment: (...)<br>
 Modeling approaches for ecosystem services: (...)<br>
 Landuse scenarios and co-development: (...)<br>-->
 <h3>How to Use the Viewer</h3>
-Click on the checkboxes on the panel on the right to turn data layers on and off. If you click on some of the icons you can learn more information about the data. You can also press the data download button for links to be able to access files displayed. For more information click on the 'Start Tutorial' button at the top of this panel. 
+Click on the checkboxes on the panel on the right to turn data layers on and off. If you click on some of the icons you can learn more information about the data. You can also press the data download button for links to be able to access files displayed. For more information click on the 'Start Tutorial' button. 
+<br>
+<button type= "button" class= "button" id="aboutTutorialButton" onclick="restartTutorialAbout()">Start Tutorial</button>
+<br><br>
 <img class = "image" src="img/stakeholdersAbout.png" width= 100%>
-<br>
+<br><br>
 <h3>The Team</h3>
-<img class = "image" src="img/partnerLogos/natcap.png" id= "natCapLogo" width="25%">
-<br>
+
+<img src="img/partnerLogos/natcap.png" id= "natCapLogo" width="25%">
+<br><br>
 <div id="natCapText">At The Natural Capital Project we are developing practical tools and approaches to account for nature’s contributions to society, so that leaders of countries, companies, communities, and organizations worldwide can make smarter decisions for a more sustainable future. </div>
 <br>
 <h4> Our Partners </h4>
@@ -69,7 +76,7 @@ Click on the checkboxes on the panel on the right to turn data layers on and off
 <div class="teamDescriptor"><img class = "image teamPicture" src="img/charlotte-weil.png" height="100"><br><a href="http://www.charlotteweil.fr/"> Charlotte Weil</a></div>
 <div class="teamDescriptor"><img class = "image teamPicture" src="img/ashleyCamhi.png" height="100"><br><a href="https://www.camhienvironmental.com/experts-1"> Ashley L. Camhi</a></div>
 <div class="teamDescriptor"><img class = "image teamPicture" src="img/contrerasAndrea.png" height="100"><br><a href="mailto:andrea12@stanford.edu"> Andrea Contreras</a></div>
-<br>
+<br><br>
 <h3>Additional Resources</h3>
 <a href="data/dataInfoDocuments/renewablesOnePager.pdf">Analysis of Renewable Energy Potential</a>
 <br><br><br>
