--- a/caracol/index.html
+++ b/caracol/index.html
@@ -143,38 +143,65 @@
 
 
 
-
-
 <!-- LULC Panel  -->
+<!-- aka SDP Activities panel -->
 <div class= "LULCclose panels" id= "LULCPanel3"> <button type= "button" class= "exitButton" onclick="LULCPanelClose()">X</button>
 
-	<h2>Sustainable Development Plan Activities</h2>
-
-	<img src="img/finalScenario.png" id= "staticFigure" width= 100%>
+	<h2>Sustainable Development Plan</h2>
+	
+	<p><b>The fundamental goal of the Sustainable Development Plan is to facilitate the improved management of ecosystems in the CMCC so as to maintain their integrity while ensuring the delivery of ecosystem service benefits for present and future generations of Belizeans and the global community.</b></p>
+	
+	<p>The aims of the SDP are threefold: (i) to focus management activities that are already being undertaken, ensuring these are integrated; (ii) to highlight additional activities and actions that could be undertaken to help meet the challenge of ensuring a sustainable future; and (iii) to provide a roadmap for the phased implementation of a governance structure to ensure its success. </p>
+	
+	<center><p><b><i> The result is a vision for a vibrant region where healthy ecosystems support — and are supported by — thriving local communities and a prosperous economy.</i></b></p></center>
+	
+	<p>This is a brief overview of the highlights of the CMCC Sustainable Development Plan. For more detail, please see the full plan, available for download here <i>(Please note that this link will be provided once the SDP document is finalized for sharing.)</i></p>
+	
+	<br<p> </p><br>
+	
+	<!-- Final SDP Activities map -->
+	
+	<center><h3>A Vision for Sustainable Development to 2035</h3></center>
+	<img src="img/finalScenario.png" id= "SDPActivities" width= 100%>
+	
+	<!--
+	<button type= "button" class="button" id= "downloadFigureButton" onclick="downladFigure()"> <img src="img/expand.png" width = "30">
+	</button> 
+	-->
+	
+	<a href="img/finalScenario.png" download="SDPActivities"><button type= "button" class="button"><img src="img/download.png" alt="Download" width="30"></button></a>
 
 	<br><br><br>
 
+	<b><i>Short-term strategy (up to 5 years - 2025)</i></b>
+	<br>
+	Paving the way: improvement of the main recreation and tourism sites and implementation of the governance processes and management plans necessary to make the next steps a success.
+ 	<br><br>
+	<b><i>Medium-term strategy (6-10 years - 2030)</i></b>
+	<br>
+	Implementation and monitoring: New products and services in the tourism, agriculture, education and research sectors are developed, and capacity is increased. Sustainable practices in agriculture and forestry are progressing.
+ 	<br><br>
+	<b><i>Long-term strategy (11-15 years - 2035)</i></b>
+	<br>
+Cementing the vision: All protected areas are effectively managed allowing both the protection of habitats at risk and the development of nature-based activities. Agriculture and wild product harvesting practices are sustainable. A long-term inclusive governance framework is in place along with sustainable financing mechanisms.
 
+	<br<p> </p><br>
 
-	<h3>Scenario Comparisons </h3>
+	<p>Implementation of the SDP activities will be guided by the following general zoning scheme, based on an assessment of development pressures and their tradeoffs in terms of environmental, social, and economic impacts.</p>
+
+	<!-- Zoning map -->
+	
+	<img src="img/zoning_scheme_clip.png" id= "ZoningMap" width= 100%>
+	<br>
+	
+	<!--
 	<button type= "button" class="button" id= "downloadFigureButton" onclick="downladFigure()"> <img src="img/expand.png" width = "30">
 	</button> 
-	<a href="scripts/staticFigureBelize.png" download="staticFigure"><button type= "button" class="button"><img src="img/download.png" alt="Donwload" width="30"></button></a>
+	-->
 
-<br>
-
-
-	<img src="scripts/staticFigureBelize.png" id= "staticFigure" width= 100%>
-<br>
-<button type= "button" class="close" id= "expandFigureButton" onclick="expandFigureOpen()">Click to Expand Figure</button>
-	<div>
-		<h4>About this Figure</h4>
-		The first two maps represent a palette of options for future development. The "more conservative" options allow for an increase in tourism, selective site development, improved agricultural practices and continued sustainable timber, with a focus on minimal expansion into natural areas, and minimal impact on natural resources. 
-		<br>
-		"Less conservative" options allow for a greater increase in tourism, more site development, expansion of agriculture into natural areas and continued sustainable timber. These generally lead to a greater impact on natural resources.
-		<br>
-		For each set of development options, a synopsis of projected changes in ecosystem services, revenue and community impact are provided. The first graph shows a simple, relative comparison of how these are likely to change under each set of development options. The second set of graphs provide more detail, with percent change given for each environmental, revenue and community impact.
-	</div>
+	<a href="img/zoning_scheme_clip.png" download="ZoningMap"><button type= "button" class="button"><img src="img/download.png" alt="Download" width="30"></button></a>
+	
+	
 </div>
 
 <div class= "LULCclose panels" id= "LULCPanel2"><!--<h3>Expansion Scenarios Draft</h3> --><button type= "button" class= "exitButton" onclick="LULCPanelClose2()">X</button>
@@ -185,9 +212,6 @@
 	<img src="img/placeholdersmall.png" height="100" width="100">
 	<img src="img/placeholdersmall.png" height="100" width="100">
 </div>
-
-
-
 
 
 
@@ -219,11 +243,16 @@
 	Turn layers on and off to explore the data. Hover and click on the map layers for additional information!
 	<br>
 	<br>
-	Legend will update in the bottom left corner. 
+	The legend will update in the bottom left corner. 
 	<br>
 	<!--<button type= "button" class="button" style="display: inline;" id="prev1Button">Previous</button>-->
 	<button type= "button" class="button" style="display: inline;" id="next1Button">Next</button>
+	
+	<br><br>
 
+	Before continuing, please tell us a bit about yourself:
+	<br>
+	
 	<!-- Google Form for detailed Analytics -->
 	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfpLkfgLFXc59aiZpRqQizh2cQpMd_e04w98nkMNocZYWK_Ow/viewform?embedded=true" width="90%" height="531" frameborder="0" marginheight="0" marginwidth="0">Analytics loading…</iframe>
 	<!-- End form -->
