--- a/pro-agua/html/navbar.html
+++ b/pro-agua/html/navbar.html
@@ -1,88 +1,124 @@
- <!-- to embed : 
+<!-- to embed : 
   <div w3-include-html="html/navbar.html"></div>
 -->
 
+<div class="white bg-black" style="cursor: pointer">
+  <a href="index.html" class="link white bg-black pa3 pb2 navbarLink">
+    <i class="fa fa-home"></i
+  ></a>
 
-<div class="white bg-black" style="cursor: pointer;">
-
-    
-    <a href="index.html" class="link white  bg-black pa3 pb2 navbarLink">
-      <i class='fa fa-home'></i></a>
-
-    <div class="dropdown bg-black pa3">
-      Diagnóstico hidrológicos
-      <div class="dropdown-content bg-black white pa3">    
-      <a href="hidricoPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Región de Puerto Maldonado 
+  <div class="dropdown bg-black pa3">
+    Diagnóstico hidrológico
+    <div class="dropdown-content bg-black white pa3">
+      <a
+        href="hidricoPEM.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
+        Región de Puerto Maldonado
       </a>
-      <!-- Below: Will be hidricoTAH.html --> 
-      <a href="hidricoTAH.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Región de Tahuamanu-Cobija 
+      <!-- Below: Will be hidricoTAH.html -->
+      <a
+        href="hidricoTAH.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
+        Región de Tahuamanu-Cobija
       </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Descargar Resultados 
+      <a
+        href="futuroResultados.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
+        Descargar Resultados
       </a>
-      </div>
     </div>
+  </div>
 
-    <div class="dropdown bg-black pa3">
-      Diagnóstico de inundaciones
-      <div class="dropdown-content bg-black white pa3">    
-      <a href="inundacion_historia.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+  <div class="dropdown bg-black pa3">
+    Diagnóstico de inundaciones
+    <div class="dropdown-content bg-black white pa3">
+      <a
+        href="inundacion_historia.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
         Inundaciones históricas
       </a>
-      <!-- Below: Will be floodPEM.html --> 
-      <a href="floodPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+      <!-- Below: Will be floodPEM.html -->
+      <a
+        href="floodPEM.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
         Área de Enfoque Madre de Dios
       </a>
-      <!-- Below: Will be floodTAH.html --> 
-      <a href="floodTAH.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+      <!-- Below: Will be floodTAH.html -->
+      <a
+        href="floodTAH.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
         Área de Enfoque Acre-Purus
       </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Descargar Resultados 
+      <a
+        href="futuroResultados.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
+        Descargar Resultados
       </a>
-      </div>
     </div>
+  </div>
 
-    <div class="dropdown bg-black pa3">
-      Diagnóstico epidemiológico
-      <div class="dropdown-content bg-black white pa3">    
-      <a href="saludPEM.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Región de Puerto Maldonado 
+  <div class="dropdown bg-black pa3">
+    Diagnóstico epidemiológico
+    <div class="dropdown-content bg-black white pa3">
+      <a
+        href="saludPEM.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
+        Región de Puerto Maldonado
       </a>
-      <!-- Below: Will be saludTAH.html --> 
-      <a href="saludTAH.html"  class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"> 
-        Región de Tahuamanu-Cobija 
+      <!-- Below: Will be saludTAH.html -->
+      <a
+        href="saludTAH.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
+        Región de Tahuamanu-Cobija
       </a>
-      <a href="futuroResultados.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Descargar Resultados 
+      <a
+        href="futuroResultados.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
+        Descargar Resultados
       </a>
-      </div>
     </div>
+  </div>
 
-    <div class="dropdown bg-black pa3">
-      Restauración minera
-      <div class="dropdown-content bg-black white pa3">    
-      <a href="pampa.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
-        Contexto de la Pampa 
+  <div class="dropdown bg-black pa3">
+    Restauración minera
+    <div class="dropdown-content bg-black white pa3">
+      <a
+        href="pampa.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
+        Contexto de la Pampa
       </a>
-      <a href="futuroPampa.html" class="link white hover-bg-dark-gray bg-black pb2 db navbarLink">
+      <a
+        href="futuroPampa.html"
+        class="link white hover-bg-dark-gray bg-black pb2 db navbarLink"
+      >
         Escenarios de reforestación (la Pampa)
       </a>
-      </div>
     </div>
-  
+  </div>
 
-    <div class="dropdown bg-black pa3">
-      <a href="masRecursos.html" class="link white  bg-black pb2 db navbarLink">
-      Más recursos </a> 
-
-    </div>
-
-
-    <a href="#" onclick="openNav();" class="link white hover-bg-dark-gray fr pa3 navbarLink" style="font-size: 1.2vw;">
-      ⓘ PRO-Agua
+  <div class="dropdown bg-black pa3">
+    <a href="masRecursos.html" class="link white bg-black pb2 db navbarLink">
+      Más recursos
     </a>
+  </div>
 
+  <a
+    href="#"
+    onclick="openNav();"
+    class="link white hover-bg-dark-gray fr pa3 navbarLink"
+    style="font-size: 1.2vw"
+  >
+    ⓘ PRO-Agua
+  </a>
 </div>
