Add final SDP links

--- a/caracol/html/about.html
+++ b/caracol/html/about.html
@@ -5,10 +5,12 @@
 
 <h3>Project documentation</h3>
 
-<b>Sustainable Development Plan for the CMCC</b> - Full text of the SDP document <i>(Note that this link will be added once the final version of the SDP is available)</i>
+<b><a href="https://drive.google.com/file/d/1pZoHeBfxp0l5pOWG9mSTlEx_zae1_WPZ/view?usp=sharing">Sustainable Development Plan for the CMCC - Full text</a></b>
 <br> <br>
-<!--<a href="data/dataInfoDocuments/interimReportOctober2019.pdf">Interim Report October 2019</a>
-<br>-->
+<b><a href="https://drive.google.com/file/d/1bRCLB528yhRTnAUX3d9BOMDaktO1ONIr/view?usp=sharing">Sustainable Development Plan Community Summary (English)</a></b>
+<br> <br>
+<b><a href="https://drive.google.com/file/d/11YHVrvRBw09Ll_Z9H8F_8ns1LfRxlL40/view?usp=sharing">Plan de Desarrollo Sostenible - Resumen para Comunidades (Español)</a></b>
+<br> <br>
 <b><a href="data/dataInfoDocuments/may2020InterimReport.pdf">Report on Modeling & Scenarios</a></b> - Technical report with detail about the modeling and scenarios that went into the SDP.
 
 <br><br>
