--- a/caracol/index.html
+++ b/caracol/index.html
@@ -155,7 +155,7 @@
 	
 	<center><p><b><i> The result is a vision for a vibrant region where healthy ecosystems support — and are supported by — thriving local communities and a prosperous economy.</i></b></p></center>
 	
-	<p>This is a brief overview of the highlights of the CMCC Sustainable Development Plan. For more detail, please see the full plan, available for download here <i>(Please note that this link will be provided once the SDP document is finalized for sharing.)</i></p>
+	<p>This is a brief overview of the highlights of the CMCC Sustainable Development Plan. For more detail, please see the full plan, <a href="https://drive.google.com/file/d/1pZoHeBfxp0l5pOWG9mSTlEx_zae1_WPZ/view?usp=sharing"> available for download here </a><i></p>
 	
 	<br<p> </p><br>
 	
