--- a/caracol/html/about.html
+++ b/caracol/html/about.html
@@ -7,6 +7,8 @@
 
 <b><a href="https://drive.google.com/file/d/1wdFuerNPsPCVm4DJYqcOOdlpU5hVDk1n/view?usp=sharing">Sustainable Development Plan for the CMCC - Full text</a></b>
 <br> <br>
+<b><a href="https://drive.google.com/file/d/1BhDdoJPtrrfGoUxzoXLKYupTy9QJrHY_/view?usp=sharing">Sustainable Development Plan Executive Summary</a></b>
+<br> <br>
 <b><a href="https://drive.google.com/file/d/1bRCLB528yhRTnAUX3d9BOMDaktO1ONIr/view?usp=sharing">Sustainable Development Plan Community Summary (English)</a></b>
 <br> <br>
 <b><a href="https://drive.google.com/file/d/11YHVrvRBw09Ll_Z9H8F_8ns1LfRxlL40/view?usp=sharing">Plan de Desarrollo Sostenible - Resumen para Comunidades (Español)</a></b>
