Fix a broken link in Viz Gallery

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 <div class="w3-row-padding">
 
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
-      <a href='viz.naturalcapitalproject.stanford.edu/gobiTraining' target='_blank'><img src="images/gobi.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <a href='http://viz.naturalcapitalproject.stanford.edu/gobiTraining' target='_blank'><img src="images/gobi.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Gobi Training Viewer</b></p>
         <p>Bringing Natural Capital Knowledge to Mongolia’s Gobi Steppe
