Added Prototype Natural Capital World Viewer, updated URL for Myanmar (now hosted on WWF's site), and commented out 3 non-functioning buttons at top of page.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <div class="w3-section w3-bottombar w3-padding-16">
       <span class="w3-margin-right">Filter:</span> 
       <button class="w3-button w3-black" onclick="filterSelection('all')">ALL</button>
-      <button class="w3-button w3-white" onclick="filterSelection('natcaps')"><i class="fa fa-diamond w3-margin-right"></i>NatCap's</button>
+      <!-- button class="w3-button w3-white" onclick="filterSelection('natcaps')"><i class="fa fa-diamond w3-margin-right"></i>NatCap's</button>
       <button class="w3-button w3-white w3-hide-small" onclick="filterSelection('webmaps')"><i class="fa fa-photo w3-margin-right"></i>Webmaps</button>
-      <button class="w3-button w3-white w3-hide-small" onclick="filterSelection('art')"><i class="fa fa-map-pin w3-margin-right"></i>Art</button>
+      <button class="w3-button w3-white w3-hide-small" onclick="filterSelection('art')"><i class="fa fa-map-pin w3-margin-right"></i>Art</button> -->
     </div>
     </div>
   </header>
@@ -74,23 +74,22 @@
   <!-- First Inspiration Grid-->
   <div class="w3-row-padding filterDiv natcaps webmaps">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href='http://www.myanmarnaturalcapital.org/en' target='_blank'><img src="/images/myanmar.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <a href='https://www.worldwildlife.org/pages/taking-stock-of-myanmar-s-natural-capital' target='_blank'><img src="/images/myanmar.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Myanmar's Natural Capital</b></p>
         <p>Myanmar's Natural Capital website presents interactively an assessment led by World Wide Fund for Nature, at the request of the Government of Myanmar, will help Myanmar make those connections. The assessment includes information about where the country’s natural capital is located, what ecosystem services it provides to people, and how those services will change under different climate change and development scenarios. See <a href='http://www.myanmarnaturalcapital.org/en/ecosystem/provide-habitat' target='_blank'><i>Explore Ecosystem Services</i></a> for interactive maps of Myanmar's natural assets—land, water, soil, plants, wildlife and air—that provides benefits to people.</p>
       </div>
     </div>
 
-    <div class="w3-third w3-container">
-      <a href='http://viz.naturalcapitalproject.stanford.edu/ipbes/' target='_blank'><img src="images/natureforpeople.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+
+    <div class="w3-third w3-container w3-margin-bottom">
+      <a href='https://global-web-viewer-srfv5ztfda-uc.a.run.app/' target='_blank'><img src="images/protoViewer.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Nature's Contributions to People, worldwide</b></p>
-        <p>As part of UN's <a href='https://www.ipbes.net/' target='_blank'>IPBES</a> Global Assessment,  we mapped key ecosystem services worldwide at a fine resolution, under future scenarios (Chaplin-Kramer, in press). Where does nature contributes to people the most today, and where will people be most at risk in the future? This interactive viewer helps to explore these dense maps and facilitates comparisons across different regions, services, scenarios. Informing science-based policies, with the right maps in the right hands!
-        <span class="light"> By Charlotte Weil, Anna Hääg & team</span>
-      </p>
+        <p><b>Prototype Natural Capital World Viewer</b></p>
+        <p>Nature is critical to human wellbeing. Ecosystems provide people with crucial benefits, from clean water to nourishing food. Nature helps us adapt to a changing climate, provides us with materials to build our homes, and boosts human health. But human development activities are destroying the ecosystems that support and sustain us. How can we maintain human prosperity while safeguarding and regenerating the natural environment on which it depends? The Natural Capital World Viewer is designed to make nature’s diverse benefits to people easily accessible and understandable. This viewer allows users to explore several of the most important benefits nature provides to people.</p>
       </div>
     </div>
-
+  
 
     <div class="w3-third w3-container w3-margin-bottom">
       <a href='http://viz.naturalcapitalproject.stanford.edu/pro-agua/' target='_blank'><img src="images/proagua.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
@@ -103,8 +102,20 @@
     </div>
   </div>
   
+
   <!-- Second Photo Grid-->
-  <div class="w3-row-padding w3-margin-bottom filterDiv natcaps webmaps">
+    <div class="w3-row-padding w3-margin-bottom filterDiv natcaps webmaps">
+      <div class="w3-third w3-container">
+      <a href='http://viz.naturalcapitalproject.stanford.edu/ipbes/' target='_blank'><img src="images/natureforpeople.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>Nature's Contributions to People, worldwide</b></p>
+        <p>As part of UN's <a href='https://www.ipbes.net/' target='_blank'>IPBES</a> Global Assessment,  we mapped key ecosystem services worldwide at a fine resolution, under future scenarios (Chaplin-Kramer, in press). Where does nature contributes to people the most today, and where will people be most at risk in the future? This interactive viewer helps to explore these dense maps and facilitates comparisons across different regions, services, scenarios. Informing science-based policies, with the right maps in the right hands!
+        <span class="light"> By Charlotte Weil, Anna Hääg & team</span>
+      </p>
+      </div>
+    </div>
+
+
     <div class="w3-third w3-container w3-margin-bottom">
       <a href='https://charlottegiseleweil.github.io/NatCapTraining/' target='_blank'><img src="images/training.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -123,7 +134,11 @@
         <span class="light">By Charlotte Weil, Gunes Yurdakul & Cyril Van Schreven </span> </p>
       </div>
     </div>
+  </div>
 
+
+  <!-- Third Examples Row --> 
+  <div class="w3-row-padding w3-margin-bottom filterDiv natcaps webmaps invest">
     <div class="w3-third w3-container">
       <a href='https://ecoparis.github.io/' target='_blank'><img src="images/ecoparis.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -135,8 +150,6 @@
     </div>
 
 
-  <!-- Third Examples Row --> 
-  <div class="w3-row-padding w3-margin-bottom filterDiv natcaps webmaps invest">
     <div class="w3-third w3-container w3-margin-bottom">
       <a href='https://joannalcy.github.io/hra-dashboard/' target='_blank'><img src="images/hra.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -155,8 +168,11 @@
         </p>
       </div>
     </div>
+  </div>
 
 
+<!-- Fourth Examples Row -->
+  <div class="w3-row-padding">
     <div class="w3-third w3-container">
       <a href='https://trumancfy.github.io/Data_Viz_2018/' target='_blank'><img src="images/swy.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -166,10 +182,8 @@
         </p>
       </div>
     </div>
-  </div>
 
-  <!-- Fourth Examples Row -->
-  <div class="w3-row-padding">
+
     <div class="w3-third w3-container w3-margin-bottom">
       <a href='http://viz.naturalcapitalproject.stanford.edu/rangelands' target='_blank'><img src="images/rangelands.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -188,8 +202,11 @@
       </p>
       </div>
     </div>
+  </div>
 
-    <div class="w3-third w3-container w3-margin-bottom">
+  <!-- Random Examples Row -->
+<div class="w3-row-padding">
+      <div class="w3-third w3-container w3-margin-bottom">
       <a href='https://charlottegiseleweil.github.io/webviz_natcap/index.html' target='_blank'><img src="images/tana.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Multi-Objective Optimization Viewer</b></p>
@@ -198,10 +215,8 @@
       </p>
       </div>
     </div>
-  </div>
 
-  <!-- Random Examples Row -->
-<div class="w3-row-padding">
+
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
       <a href='https://www.nationalgeographic.com/animals/2019/07/endangered-species-in-every-US-state-interactive-map/?cmpid=org=ngp::mc=crm-email::src=ngp::cmp=editorial::add=Animals_20190822&rid=97971DB20B122974B60A8686F6A0BDC0' target='_blank'><img src="images/natgeo_species.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -221,7 +236,10 @@
         </p>
       </div>
     </div>
+  </div>
 
+    <!-- VESL Examples Row -->
+<div class="w3-row-padding">
     <div class="w3-third w3-container filterDiv webmaps">
       <a href='http://www.impactlab.org/map/#usmeas=absolute&usyear=1981-2010&gmeas=absolute&gyear=2080-2099&tab=global&grcp=rcp85' target='_blank'><img src="images/climateimpactlab.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -231,12 +249,8 @@
         </p>
       </div>
     </div>
-  </div>
 
 
-
-    <!-- VESL Examples Row -->
-<div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
       <a href='https://vesl.jpl.nasa.gov/ice-sheets/greenland-ice-retreat/' target='_blank'><img src="images/nasa_c.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -256,7 +270,11 @@
         </p>
       </div>
     </div>
+  </div>
 
+
+  <!-- Fifth Examples Row -->
+  <div class="w3-row-padding">
     <div class="w3-third w3-container filterDiv webmaps">
       <a href='https://vesl.jpl.nasa.gov/' target='_blank'><img src="images/nasa.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -266,12 +284,7 @@
         </p>
       </div>
     </div>
-  </div>
 
-
-
-  <!-- Fifth Examples Row -->
-  <div class="w3-row-padding">
 
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
       <a href='http://cons.scienceontheweb.net/belize/' target='_blank'><img src="images/belize1.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
@@ -292,7 +305,14 @@
       </p>
       </div>
     </div>
+  </div>
 
+
+<br>
+ 
+
+  <!-- Sixth Examples Row -->
+  <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom filterDiv webmaps">
       <a href='https://dopa-explorer.jrc.ec.europa.eu/globe/1' target='_blank'><img src="images/dopaExplorer.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -303,14 +323,6 @@
       </div>
     </div>
 
-  </div>
-
-
-<br>
- 
-
-  <!-- Sixth Examples Row -->
-  <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
       <a href='http://msp.naturalcapitalproject.org/msp_concierge_master/' target='_blank'><img src="images/mp.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -330,7 +342,10 @@
         </p>
       </div>
     </div>
+  </div>
 
+    <!-- Seventh Examples Row -->
+  <div class="w3-row-padding">
     <div class="w3-third w3-container filterDiv webmaps">
       <a href='https://coastalresilience.org/tools/apps/#apps_id%7Cassess-risk%7C1' target='_blank'><img src="images/tnc.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -338,10 +353,7 @@
         <p>The Nature Conservancy has developped its own suite of visualization apps specific to case studies around the world.</p>
       </div>
     </div>
-  </div>
 
-    <!-- Seventh Examples Row -->
-  <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom filterDiv art">
       <a href='http://www.awavenavr.com/' target='_blank'><img src="images/vra.jpg" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -360,9 +372,12 @@
           <span class="light"> By Stephen Standridge </span></p>
       </div>
     </div>
+  </div>
 
+<!-- Eight Examples Row -->
+  <div class="w3-row-padding">
     <div class="w3-third w3-container">
-      <a href='https://store.steampowered.com/app/409020/The_Stanford_Ocean_Acidification_Experience/' target='_blank'><img src="images/vro.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+    <a href='https://store.steampowered.com/app/409020/The_Stanford_Ocean_Acidification_Experience/' target='_blank'><img src="images/vro.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Ocean Acification in Virtual Reality</b></p>
         <p>Using latest Virtual Reality technology, Stanford researchers have produced a virtual underwater ecosystem to allow you to observe firsthand what coral reefs are expected to look like by the end of the century if we do not curb our CO2 emissions.
@@ -371,10 +386,6 @@
       </div>
     </div>
 
-  </div>
-
-<!-- Eight Examples Row -->
-  <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
       <a href='https://phawthorne.github.io/mc-vis/' target='_blank'><img src="images/peter.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -393,7 +404,11 @@
         </p>
       </div>
     </div>
+  </div>
 
+
+  <!-- 9th Examples Row -->
+<div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom filterDiv art webmaps">
       <a href='https://arcg.is/0XGrDO' target='_blank'><img src="images/nomadic.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -404,12 +419,7 @@
       </div>
     </div>
 
-  </div>
-
-
-  <!-- 9th Examples Row -->
-<div class="w3-row-padding">
-  <div class="w3-third w3-container w3-margin-bottom filterDiv">
+    <div class="w3-third w3-container w3-margin-bottom filterDiv">
       <a href='https://maps.coastalresilience.org/gulfmex/' target='_blank'><img src="images/coastalTNC.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Coastal Defense App </b></p>
@@ -428,8 +438,11 @@
       </p>
       </div>
     </div>
+  </div>
 
-    <div class="w3-third w3-container w3-margin-bottom filterDiv webmaps">
+  <!-- 10th Examples Row -->
+<div class="w3-row-padding">
+  <div class="w3-third w3-container w3-margin-bottom filterDiv webmaps">
       <a href='https://resourcewatch.org/data/explore' target='_blank'><img src="images/resourceWatch.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Resource Watch </b></p>
@@ -439,11 +452,6 @@
       </div>
     </div>
 
-
-  </div>
-
-  <!-- 10th Examples Row -->
-<div class="w3-row-padding">
   <div class="w3-third w3-container w3-margin-bottom filterDiv webmaps">
       <a href='https://www.prepdata.org/explore' target='_blank'><img src="images/prep.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -463,6 +471,10 @@
       </p>
       </div>
     </div>
+  </div>
+
+<!-- 11th Examples Row -->
+<div class="w3-row-padding">
 
     <div class="w3-third w3-container w3-margin-bottom filterDiv webmaps">
       <a href='https://foodsystemsdashboard.org/compareandanalyze' target='_blank'><img src="images/foodSystems.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
@@ -473,12 +485,6 @@
       </p>
       </div>
     </div>
-
-
-  </div>
-
-<!-- 11th Examples Row -->
-<div class="w3-row-padding">
 
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
       <a href='https://app.beescape.org/' target='_blank'><img src="images/beescape.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
@@ -499,6 +505,10 @@
         </p>
       </div>
     </div>
+  </div>
+
+<!-- 12th Examples Row -->
+<div class="w3-row-padding">
 
     <div class="w3-third w3-container w3-margin-bottom">
       <img src="images/boo.png" alt="Image" style="width:100%" class="w3-hover-opacity">
@@ -510,12 +520,6 @@
       </div>
     </div>
 
-
-  </div>
-
-<!-- 12th Examples Row -->
-<div class="w3-row-padding">
-
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
       <a href='http://viz.naturalcapitalproject.stanford.edu/gobiTraining' target='_blank'><img src="images/gobi.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -526,8 +530,6 @@ This four-day virtual event will introduce participants to the Natural Capital A
         </p>
       </div>
     </div>
-
-
   </div>
 
 
