Added Mekong virtual journey visualization site (from Rafael Schmitt's project)

--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
       </div>
     </div>
 
-
     <div class="w3-third w3-container w3-margin-bottom">
       <a href='https://global-web-viewer-srfv5ztfda-uc.a.run.app/' target='_blank'><img src="images/protoViewer.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -90,8 +89,19 @@
       </div>
     </div>
   
-
     <div class="w3-third w3-container w3-margin-bottom">
+      <a href='https://arteries.blue/' target='_blank'><img src="images/Mekong.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>I Am Mekong</b></p>
+        <p>Rising sea levels, accelerated land degradation, and reduced sediment supply is hurting the Mekong. But it doesn’t have to be that way. In a basin where decision-making is deeply fractured and development strategies are politically complicated, a major shift of some form is required if the Mekong is to survive. Determining what that shift looks like is the answer to an existential question for one of the most productive regions in Asia.</p>
+      </div>
+    </div>
+  </div>
+  
+
+  <!-- Second Photo Grid-->
+    <div class="w3-row-padding w3-margin-bottom filterDiv natcaps webmaps">
+      <div class="w3-third w3-container w3-margin-bottom">
       <a href='http://viz.naturalcapitalproject.stanford.edu/pro-agua/' target='_blank'><img src="images/proagua.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Natural Resilience in the Amazon</b></p>
@@ -100,11 +110,7 @@
       </p>
       </div>
     </div>
-  </div>
-  
 
-  <!-- Second Photo Grid-->
-    <div class="w3-row-padding w3-margin-bottom filterDiv natcaps webmaps">
       <div class="w3-third w3-container">
       <a href='http://viz.naturalcapitalproject.stanford.edu/ipbes/' target='_blank'><img src="images/natureforpeople.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -115,7 +121,6 @@
       </div>
     </div>
 
-
     <div class="w3-third w3-container w3-margin-bottom">
       <a href='https://charlottegiseleweil.github.io/NatCapTraining/' target='_blank'><img src="images/training.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -124,9 +129,12 @@
           <span class="light">By D. Tekin & team</span></p>
       </div>
     </div>
+  </div>
 
 
-    <div class="w3-third w3-container">
+  <!-- Third Examples Row --> 
+  <div class="w3-row-padding w3-margin-bottom filterDiv natcaps webmaps invest">
+      <div class="w3-third w3-container">
       <a href='http://viz.naturalcapitalproject.stanford.edu/GreenGrowthBook' target='_blank'><img src="images/gg.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Green Growth That Works</b></p>
@@ -134,21 +142,6 @@
         <span class="light">By Charlotte Weil, Gunes Yurdakul & Cyril Van Schreven </span> </p>
       </div>
     </div>
-  </div>
-
-
-  <!-- Third Examples Row --> 
-  <div class="w3-row-padding w3-margin-bottom filterDiv natcaps webmaps invest">
-    <div class="w3-third w3-container">
-      <a href='https://ecoparis.github.io/' target='_blank'><img src="images/ecoparis.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b>EcoParis: Ecosystem Services in Paris</b></p>
-        <p>EcoParis is an interactive visualization of map data of ecosystem services in urban and peri-urban areas in the Ile-de-France region from the IDEFESE project.
-        <span class="light"> By A. Ferragni, K. Sinnathamby, R. Liautaud </span>
-        </p>
-      </div>
-    </div>
-
 
     <div class="w3-third w3-container w3-margin-bottom">
       <a href='https://joannalcy.github.io/hra-dashboard/' target='_blank'><img src="images/hra.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
@@ -520,6 +513,16 @@
       </div>
     </div>
 
+    <div class="w3-third w3-container">
+      <a href='https://ecoparis.github.io/' target='_blank'><img src="images/ecoparis.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-container w3-white">
+        <p><b>EcoParis: Ecosystem Services in Paris</b></p>
+        <p>EcoParis is an interactive visualization of map data of ecosystem services in urban and peri-urban areas in the Ile-de-France region from the IDEFESE project.
+        <span class="light"> By A. Ferragni, K. Sinnathamby, R. Liautaud </span>
+        </p>
+      </div>
+    </div>
+
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
       <a href='http://viz.naturalcapitalproject.stanford.edu/gobiTraining' target='_blank'><img src="images/gobi.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
@@ -531,7 +534,6 @@ This four-day virtual event will introduce participants to the Natural Capital A
       </div>
     </div>
   </div>
-
 
 <!--
 MORE
