updated broken link for Myanmar project
redirected the link to the new hosting site at worldwildlife.org

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <a href='https://www.worldwildlife.org/pages/taking-stock-of-myanmar-s-natural-capital' target='_blank'><img src="/images/myanmar.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Myanmar's Natural Capital</b></p>
-        <p>Myanmar's Natural Capital website presents interactively an assessment led by World Wide Fund for Nature, at the request of the Government of Myanmar, will help Myanmar make those connections. The assessment includes information about where the country’s natural capital is located, what ecosystem services it provides to people, and how those services will change under different climate change and development scenarios. See <a href='http://www.myanmarnaturalcapital.org/en/ecosystem/provide-habitat' target='_blank'><i>Explore Ecosystem Services</i></a> for interactive maps of Myanmar's natural assets—land, water, soil, plants, wildlife and air—that provides benefits to people.</p>
+        <p>Myanmar's Natural Capital website presents interactively an assessment led by World Wide Fund for Nature, at the request of the Government of Myanmar, will help Myanmar make those connections. The assessment includes information about where the country’s natural capital is located, what ecosystem services it provides to people, and how those services will change under different climate change and development scenarios. See <a href='https://www.worldwildlife.org/pages/taking-stock-of-myanmar-s-natural-capital' target='_blank'><i>Explore Ecosystem Services</i></a> for interactive maps of Myanmar's natural assets—land, water, soil, plants, wildlife and air—that provides benefits to people.</p>
       </div>
     </div>
 
