updated broken URL for NatGeo US Endangered Species map

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 
     <div class="w3-third w3-container w3-margin-bottom filterDiv natcaps webmaps">
-      <a href='https://www.nationalgeographic.com/animals/2019/07/endangered-species-in-every-US-state-interactive-map/?cmpid=org=ngp::mc=crm-email::src=ngp::cmp=editorial::add=Animals_20190822&rid=97971DB20B122974B60A8686F6A0BDC0' target='_blank'><img src="images/natgeo_species.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
+      <a href='https://www.nationalgeographic.com/animals/article/endangered-species-in-every-us-state-interactive-map' target='_blank'><img src="images/natgeo_species.png" alt="Image" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>US Endangered Species Map</b></p>
         <p>This National Geographic’s  interactive map highlights lesser-known endangered species across America.
